Randomize tests in scheme

--- a/.swiftpm/xcode/xcshareddata/xcschemes/NetworkMe.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/NetworkMe.xcscheme
@@ -65,7 +65,8 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "NetworkMeAPIEndToEndTests"
